--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
 <!-- Header -->
 <header class="bg-white shadow-sm">
     <nav class="w-full max-w-7xl mx-auto px-2 py-2">
-        <a href="/" class="text-lg font-bold text-slate-800 flex items-center gap-1">
+        <a href="/home" class="text-lg font-bold text-slate-800 flex items-center gap-1">
             <i class="icon icon-soccer-ball text-emerald-600"></i>
             FMRS
         </a>
